nuevo estilo sirve reservar, falta hotel falta comprar, checar ticket

--- a/app/Resources/views/default/footer.html.twig
+++ b/app/Resources/views/default/footer.html.twig
@@ -1,7 +1,11 @@
-<footer class="footer">
-        <div class="container text-vcenter">
-            <strong>Vuelazos</strong> hecho con <i class="fa fa-lg fa-heart" id="cora"></i> por Cristian Pérez
-            <a href="http://crispj.github.io"><i class="fa fa-2x fa-github" id="github"></i></a>
-        </div>
-</footer>
+<footer class="footer-distributed">
 
+    <div class="footer-right">
+        <a href="https://github.com/CrisPj/Proyecto2/tree/bootstrap"><i class="fa fa-github fa-3x"></i></a>
+    </div>
+
+    <div class="footer-left">
+        <p>Cristian Pérez Juárez &copy 2016</p>
+    </div>
+
+</footer>
