--- a/src/Proyecto2Bundle/Resources/views/Default/result.html.twig
+++ b/src/Proyecto2Bundle/Resources/views/Default/result.html.twig
@@ -1,3 +1,6 @@
+<div class="panel-heading">
+<h3 class="panel-title">Resultado</h3>
+</div>
 <div class="panel-body">
     <table id="tabla" class="display" width="100%" cellspacing="0">
         <thead>
@@ -8,7 +11,7 @@
             <th>Origen</th>
             <th>Destino</th>
             <th>Precio</th>
-            {% if hotel == false %}
+            {% if hotel != false %}
             <td>Hotel</td>
             {%  endif %}
             <th>Reservar</th>
@@ -23,16 +26,17 @@
                 <td>{{ vuelo.origen }}</td>
                 <td>{{ vuelo.destino }}</td>
                 <td>{{ vuelo.precio }}</td>
-                {% if hotel == false %}
+                {% if hotel != false %}
                 <td>{{ hotel  }}</td>
                 {%  endif %}
                 <td>
-                    <button class="btn btn-info btn-block" id="reser">Reservar</button>
+                    <button class="btn btn-info btn-block" id="reser{{ vuelo.idVuelo }}" onclick="cosa({{ vuelo.idVuelo }},'#reser{{ vuelo.idVuelo }}')" >Reservar</button>
                 </td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
+    <a href="{{ path('pagar') }}" class="btn btn-info btn-lg">Pagar</a>
 </div>
 
 
