--- a/src/Proyecto2Bundle/Resources/views/Default/cobro.html.twig
+++ b/src/Proyecto2Bundle/Resources/views/Default/cobro.html.twig
@@ -1,13 +1,35 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<p>{{ total }}</p>
-    <label for="ticket">Ticket</label>
-    <input id="ticket" type="text">
+    <div class="container" style="min-height: 80%">
+        <div class="panel panel-default" style="margin-top: 2%">
+            <div class="panel-body">
+                <form action="/listo">
+                    <p>Total: {{ total }}</p>
+                    <label for="ticket">Ticket</label>
+                    <input  name="ticket" id="ticket" type="text">
+                    <hr>
+                    <p>Descuento = <span id="total">0% de descuento</span></p>
+                    <button type="submit" class="btn btn-success">Pagar</button>
+                </form>
+            </div>
+        </div>
+    </div>
 
-    -----
-
-    <p>Gran total = <span id="total">{{ total }}</span></p>
+{% endblock %}
+{% block javascript %}
+    <script>
+        $('#ticket').keyup (function (e) {
+            $.ajax({
+                content:'JSON',
+                url: '/cupones',
+                data: {ticket: $(this).val()},
+                success: function (data) {
+                    $('#total').text(data+"% de descuento")
+                }
+            })
+        })
+    </script>
 {% endblock %}
 
 
